Added Inline Buttons and Bread Crumbs
Added 4 Inline Buttons and Breadcrumbs along with styling it  (non responsive)

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <title>Title of the document</title>
 </head>
 
-<header class="logo">
+
+<header class="logo container">
   <img src="../SilentNight/img/logo_1.png">
-  <nav>
     <ul>
       <li><a href="#home"><i class="fa fa-home"></i></a></li>
       <li><a href="#news">Mattresses</a></li>
@@ -24,14 +24,25 @@
       <li><a href="#about">Sale</a></li>
       <li><a href="#about">Silentnight.co.uk</a></li>
     </ul>
-  </nav>
 </header>
 
 
 
 <body>
-      
+  <div class="container">
+    <div class="inline-buttons">
+      <button class="button">Free Delivery</button>
+      <button class="button">Comfort Guarantee</button>
+      <button class="button">Quality Assured</button>
+      <button class="button">Special Offers</button>
+    </div>
 
+    <ul class="breadcrumb">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Mattresses</a></li>
+      <li><a href="#">Silentnight Miracoil Memory Mattress</a></li>
+    </ul>
+</div>
 <body>
 
 
