Added in top half of the footer

--- a/index.html
+++ b/index.html
@@ -100,12 +100,48 @@
 
       <div class="col-md-4">
         <div class="form-inline form-group">
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email address">
+          <input type="email" class="form-control" placeholder="Enter your email address">
           <button type="submit" class="btn btn-primary">Subscribe</button>
         </div>
       </div>
     </div>
+
+    <div class="row" style="color: #1c5191">
+        <div class="col-2" style="line-height: 10px;"> 
+          <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Products</p>
+          <p>Beds</p>
+          <p>Mattresses</p>
+          <p>Headboards</p>
+          <p>Toys</p>
+          <p>Cots & Kids</p>
+          <p>Offers</p>
+        </div>
+        <div class="col-2" style="line-height: 10px;">
+            <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
+            <p>About Us</p>
+            <p>Contact Us</p>
+            <p>Delivery Management</p>
+            <p>FAQ's</p>
+            <p>5 Year Guarantee</p>
+            <p>Secuirty & Privacy</p>
+            <p>Terms & Conditions</p>
+            <p>Acceptable Use Policy</p>
+            <p>Cookie Policy</p>
+            <p>Silentnight Site</p>
+        </div>
+        <div class="col-2" style="line-height: 10px;">
+            <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
+            <p style="font-weight: bold">0333 123 0892</p>
+            <p style="font-weight: bold">Email Us</p>
+            <p style="font-weight: bold">info@silentnight.co.uk</p>
+        </div>
+        <div class="col-6"></div>
+      </div>
+
+
+  </div>
 </body>
+
 
 
 <!-- Footer 
