--- a/index.html
+++ b/index.html
@@ -106,57 +106,59 @@
       </div>
     </div>
 
-    <div class="row" style="color: #1c5191">
-        <div class="col-2" style="line-height: 10px;"> 
-          <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Products</p>
-          <p>Beds</p>
-          <p>Mattresses</p>
-          <p>Headboards</p>
-          <p>Toys</p>
-          <p>Cots & Kids</p>
-          <p>Offers</p>
-        </div>
-        <div class="col-2" style="line-height: 10px;">
-            <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
-            <p>About Us</p>
-            <p>Contact Us</p>
-            <p>Delivery Management</p>
-            <p>FAQ's</p>
-            <p>5 Year Guarantee</p>
-            <p>Secuirty & Privacy</p>
-            <p>Terms & Conditions</p>
-            <p>Acceptable Use Policy</p>
-            <p>Cookie Policy</p>
-            <p>Silentnight Site</p>
-        </div>
-        <div class="col-2" style="line-height: 10px;">
-            <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
-            <p style="font-weight: bold">0333 123 0892</p>
-            <p style="font-weight: bold">Email Us</p>
-            <p style="font-weight: bold">info@silentnight.co.uk</p>
-        </div>
-        <div class="col-6"></div>
+    <div class="row" style="color: #1c5191; font-size: 12px">
+      <div class="col-2" style="line-height: 5px; padding-left: 110px;">
+        <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px!important; font-weight: bold">Products</p>
+        <p>Beds</p>
+        <p>Mattresses</p>
+        <p>Headboards</p>
+        <p>Toys</p>
+        <p>Cots & Kids</p>
+        <p>Offers</p>
       </div>
-
-
+      <div class="col-2" style="line-height: 5px;">
+        <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
+        <p>About Us</p>
+        <p>Contact Us</p>
+        <p>Delivery Management</p>
+        <p>FAQ's</p>
+        <p>5 Year Guarantee</p>
+        <p>Secuirty & Privacy</p>
+        <p>Terms & Conditions</p>
+        <p>Acceptable Use Policy</p>
+        <p>Cookie Policy</p>
+        <p>Silentnight Site</p>
+      </div>
+      <div class="col-2" style="line-height: 10px;">
+        <p style="padding-top: 15px; padding-bottom: 5px; font-size: 18px; font-weight: bold">Customer Services</p>
+        <p style="font-weight: bold">0333 123 0892</p>
+        <p style="font-weight: bold">Email Us</p>
+        <p style="font-weight: bold">info@silentnight.co.uk</p>
+      </div>
+      <div class="col-6"></div>
+    </div>
   </div>
 </body>
 
-
-
-<!-- Footer 
-    <div class="footer">
+<div class="footer container">
+  <footer class="page-footer font-small pt-4">
+    <div class="container-fluid text-center text-md-left">
       <div class="row">
-        <div class="column">
-          <p>Silentnight Group Limited. Registered in England 7525259 Vat Registeration No GB 108 2580 29 Registered</p>
-          <p>Office: Silentnight Group Limited, Long Ing Business Park, Longing Lane, Barnoldswick, Lancashire BB18 6BJ</p>
+        <div class="col-md-8 mt-md-0 mt-3" style="padding-left: 100px; font-size: 12px">
+          <p>Silentnight Group Limited. Registered in England 7525259 Vat Registration No GB 108 2580 29 Registed
+            Office: Silentnight Group Limited, Long Ing Business Park, Long Inn Lane, Barnoldswick, Lancashire BB18 6BJ</p>
         </div>
-        <div class="column">
-          <p>Silentnight Group Limited. Registered in England 7525259 Vat Registeration No GB 108 2580 29 Registered</p>
-          <p>Office: Silentnight Group Limited, Long Ing Business Park, Longing Lane, Barnoldswick, Lancashire BB18 6BJ</p>
+
+        <hr class="clearfix w-100 d-md-none pb-3">
+
+        <div class="col-md-4 mb-md-0 mb-3">
+          <img src="img/fb_social.png" style="float:left;">
+          <img src="img/twitter_social.png" style="float:left;">
+          <img src="img/linkedin_social.png" style="float:left;">
+          <img src="img/pintrest_social.png" style="float:left;">
         </div>
       </div>
     </div>
--->
+</div>
 
 </html>
